@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.223 2006/02/12 01:54:04 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.224 2006/04/08 19:43:59 agaffney Exp $
+
+  8 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/fe/gtk/RunInstall.py, src/fe/gtk/URIBrowser.py:
+  remove extra print statements
 
 *GLI-gtkfe-0.3 (11 Feb 2006)
 
