@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.638 2006/04/08 18:45:27 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.639 2006/04/08 19:43:59 agaffney Exp $
+
+  8 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIInstallProfile.py:
+  fix handling of int/float for minor
 
   8 Apr 2006; Preston Cody <codeman@gentoo.org>
   touchups to add_profile in GLIMD to link to webgli
